--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid" id="footer">
             <div class="row">
                 <div class="col-xs-6">
                     <button v-on:click="clearAll()" class="btn btn-success" id="save">Save Changes</button>
